--- a/index.html
+++ b/index.html
@@ -6,53 +6,75 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <link href="css/style.css" rel="stylesheet">
 
   <title>Ordu Dernek</title>
 
 
-<style>
-
-</style>
 </head>
-<body>
 
 <body>
 
 
-
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Anasayfa</a>
-  <a href="#">Duyurular</a>
-  <a href="#">Genel Kurul</a>
-</div>
-
-<div id="main">
-
-  <span id="pal" style="font-size:30px;cursor:pointer; color: #fff" onclick="openNav()">&#9776; </span>
-
-
-<div class="image-wrap image-align">
-  <img src="images/logo200.png" class="img-responsive" alt="Responsive image" id="logo">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12"><img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo"></div>
+    <div class="col-*-*"></div>
+    <div class="col-*-*"></div>
+  </div>
 </div>
 
 
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/33.jpg" alt="" style="width:100%">
+    </div>
+
+    <div class="item">
+      <img src="images/44.jpg" alt="" style="width:100%">
+    </div>
+
+
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<script>
-function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-}
 
-function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-    document.getElementById("main").style.marginLeft= "0";
-}
-</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
