--- a/index.html
+++ b/index.html
@@ -22,46 +22,80 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12"><img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo"></div>
-    <div class="col-*-*"></div>
-    <div class="col-*-*"></div>
+    <div class="col-sm-3">
+      <img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo">
+    </div>
+
+    <div class="col-sm-6">
+      <h1>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Dernegi</h1>
+  </div>
+
+    <div class="col-sm-3">
+      <em><a href="tel:+9099999999" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90-999-999-99-99</a></em>
+    </div>
+  </div>
+</div>
+
+<!--Navbar-->
+<nav class="navbar">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+      </a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!--Slider-->
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+  <!-- Wrapper for slides -->
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+       <div class="carousel-inner">
+          <div class="item active">
+            <img src="images/33.jpg" alt="" style="width:100%">
+          </div>
+
+        <div class="item">
+           <img src="images/44.jpg" alt="" style="width:100%">
+        </div>
+
+    <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
 
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images/33.jpg" alt="" style="width:100%">
-    </div>
-
-    <div class="item">
-      <img src="images/44.jpg" alt="" style="width:100%">
-    </div>
-
-
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-
+<!--Slider end-->
 
 
 
