--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <link href="css/style.css" rel="stylesheet">
 
-  <title>Ordu Dernek</title>
+  <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+
+  <title>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Dernegi</title>
 
 
 </head>
@@ -27,11 +29,11 @@
     </div>
 
     <div class="col-sm-6">
-      <h1>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Dernegi</h1>
+      <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Dernegi</h1>
   </div>
 
     <div class="col-sm-3">
-      <em><a href="tel:+9099999999" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90-999-999-99-99</a></em>
+      <em><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></em>
     </div>
   </div>
 </div>
@@ -45,15 +47,17 @@
       </a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hakkımızda <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="#">Derneğimizin Tarihçesi</a></li>
+          <li><a href="#">Derneğimizin Tüzüğü</a></li>
+          <li><a href="#">Derneğimizin Etkinlikleri</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Yönetim ve Üyeler</a></li>
+      <li><a href="#">Galeri</a></li>
+      <li><a href="#">İletişim</a></li>
+      <li><a href="#">Başkanın mesajı</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -92,15 +96,41 @@
     </div>
   </div>
 </div>
-
-
-
 <!--Slider end-->
 
+<!--Content-->
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
 
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
 
+    </div>
+  </div>
+</div>
+
+<!--Footer-->
+<div id="footer" class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <p>blla bla bla</p>
+    </div>
+
+    <div class="col-sm-12">
+      <p>blla bla bla</p>
+    </div>
+
+    <div class="col-sm-12">
+      <p>blla bla bla</p>
+    </div>
+  </div>
+</div>
 
 
 
