--- a/index.html
+++ b/index.html
@@ -14,29 +14,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-  <title>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Dernegi</title>
+  <title>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Derneği</title>
 
 
 </head>
 
 <body>
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-3">
-      <img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo">
-    </div>
-
-    <div class="col-sm-6">
-      <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Dernegi</h1>
-  </div>
-
-    <div class="col-sm-3">
-      <em><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></em>
-    </div>
-  </div>
-</div>
 
 <!--Navbar-->
 <nav class="navbar">
@@ -59,28 +42,48 @@
       <li><a href="#">İletişim</a></li>
       <li><a href="#">Başkanın mesajı</a></li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
   </div>
 </nav>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2">
+      <img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo">
+    </div>
+
+    <div class="col-sm-10">
+      <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</h1>
+  </div>
+  </div>
+</div>
+
+
 
 <!--Slider-->
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <!-- Wrapper for slides -->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
        <div class="carousel-inner">
           <div class="item active">
-            <img src="images/33.jpg" alt="" style="width:100%">
+            <img src="images/1111.jpg" alt="" style="width:100%">
           </div>
 
         <div class="item">
-           <img src="images/44.jpg" alt="" style="width:100%">
+           <img src="images/2222.jpg" alt="" style="width:100%">
+        </div>
+
+        <div class="item">
+           <img src="images/3333.jpg" alt="" style="width:100%">
+        </div>
+
+        <div class="item">
+           <img src="images/4444.jpg" alt="" style="width:100%">
         </div>
 
     <!-- Left and right controls -->
@@ -102,7 +105,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-
+      <br>
       <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
@@ -110,28 +113,58 @@
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
-
+      <br>
     </div>
   </div>
 </div>
 
 <!--Footer-->
-<div id="footer" class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <p>blla bla bla</p>
+<div id="footer" class="container-fluid">
+  <div id="footer2" class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
     </div>
 
-    <div class="col-sm-12">
-      <p>blla bla bla</p>
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="mailto:email@gmail.com" id="email">email@gmail.com</a>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
     </div>
 
-    <div class="col-sm-12">
-      <p>blla bla bla</p>
+        <div class="row">
+      <div class="col-sm-4">
+        <p>Dumlupınar mah Ordu sok №19 Pendik</p>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
+
+      <div class="col-sm-4">
+        <p>blla bla bla</p>
+      </div>
     </div>
+
   </div>
 </div>
-
 
 
 
