--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
       </li>
       <li><a href="#">Yönetim ve Üyeler</a></li>
-      <li><a href="#">Galeri</a></li>
+      <li><a href="galery.html">Galeri</a></li>
       <li><a href="#">İletişim</a></li>
       <li><a href="#">Başkanın mesajı</a></li>
     </ul>
@@ -50,7 +50,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
-      <img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo">
+      <a href="index.html"><img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo"></a>
     </div>
 
     <div class="col-sm-10">
