--- a/yonetim.html
+++ b/yonetim.html
@@ -25,7 +25,7 @@
 <nav class="navbar">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
       </a>
     </div>
@@ -38,7 +38,7 @@
         </ul>
       </li>
       <li><a href="#">Yönetim ve Üyeler</a></li>
-      <li><a href="#">Galeri</a></li>
+      <li><a href="galery.html">Galeri</a></li>
       <li><a href="#">İletişim</a></li>
       <li><a href="#">Başkanın mesajı</a></li>
     </ul>
@@ -50,7 +50,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
-      <img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo">
+      <a href="index.html"><img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo"></a>
     </div>
 
     <div class="col-sm-10">
@@ -104,14 +104,22 @@
 <!--Content-->
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div id="parent" class="col-sm-4">
+      <img src="images/boss.jpg" class="img-rounded" alt="baskan" width="300" height="170">
+    </div>
+
+    <div class="col-sm-8">
       <br>
       <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        Merhaba</p>
+        <br>
+        <p>Derneğimiz 2015 yılında Aslancamii köyü ve mahallelerinden dernekleşmenin önemini bilen hizmet gönüllüleri tarafından kurulmuştur.
+        Derneğimiz ilke olarak yardımlaşma ve dayanışmayı görev bilmiştir.
+        Dernek yönetim kurulu, üyeleri ve ayleleri derneğimizin gelişiminde önemli katkıları olmuştur.
+        Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
+        Saygılarımla.</p>
+        <br>
+        <p>Herşey Türkiye için</p>
       </p>
       <br>
     </div>
