add icon, name, style

--- a/index.html
+++ b/index.html
@@ -105,7 +105,14 @@
 <div class="container">
   <div class="row">
     <div id="parent" class="col-sm-4">
+      <div class="thumbnail">
+      <a href="images/boss.jpg" target="blank">
       <img src="images/boss.jpg" class="img-rounded" alt="baskan" width="300" height="170">
+        <div class="caption">
+            <p id="name">Başkan <br> Nihat Coşkun</p>
+          </div>
+        </a>
+      </div>
     </div>
 
     <div class="col-sm-8">
