--- a/index.html
+++ b/index.html
@@ -134,52 +134,102 @@
 </div>
 
 <!--Footer-->
+<br>
+<div id="footer3" class="container-fluid">
+  <br>
+  <div id="footer4" class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        <a href="http://www.fatsa.gov.tr/" target="blank">
+        <img src="images/icon/1.png" alt="fatsagov" width="100" height="100">
+        </a>
+      </div>
+
+       <div class="col-sm-3">
+        <a href="http://www.fatsa.bel.tr/" target="blank">
+        <img src="images/icon/2.png" alt="fatsagov" width="100" height="100">
+      </a>
+      </div>
+
+       <div class="col-sm-3">
+        <a href="http://www.ordu.bel.tr/" target="blank">
+        <img src="images/icon/3.png" alt="fatsagov" width="100" height="100">
+      </a>
+      </div>
+
+       <div class="col-sm-3">
+        <a href="http://www.ordu.gov.tr/" target="blank">
+        <img src="images/icon/4.png" alt="fatsagov" width="100" height="100">
+      </a>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+</div>
+
+
 <div id="footer" class="container-fluid">
   <div id="footer2" class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-sm-4">
+    <div class="col-sm-3">
+        <p>blla bla bla</p>
+      </div>
+  </div>
+
+  <div class="row">
+      <div class="col-sm-3">
         <a href="mailto:email@gmail.com" id="email">email@gmail.com</a>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
-    </div>
 
-        <div class="row">
-      <div class="col-sm-4">
+    <div class="col-sm-3">
+        <p>blla bla bla</p>
+      </div>
+  </div>
+
+  <div class="row">
+      <div class="col-sm-3">
         <p>Dumlupınar mah Ordu sok №19 Pendik</p>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <p>blla bla bla</p>
       </div>
-    </div>
+
+    <div class="col-sm-3">
+        <p>blla bla bla</p>
+      </div>
+  </div>
+
+
+
+
 
   </div>
-</div>
 
 
 
