--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-  <title>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Derneği</title>
+  <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
 
 
 </head>
@@ -173,60 +173,31 @@
   <div id="footer2" class="container">
     <div class="row">
       <div class="col-sm-3">
-        <a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a>
-      </div>
+        <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
-      <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
+        <p><a href="mailto:email@gmail.com" id="email">email@gmail.com</a></p>
 
-      <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-
-    <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-  </div>
-
-  <div class="row">
-      <div class="col-sm-3">
-        <a href="mailto:email@gmail.com" id="email">email@gmail.com</a>
-      </div>
-
-      <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-
-      <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-
-    <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-  </div>
-
-  <div class="row">
-      <div class="col-sm-3">
         <p>Dumlupınar mah Ordu sok №19 Pendik</p>
+        <br>
+
       </div>
 
       <div class="col-sm-3">
-        <p>blla bla bla</p>
+        <a href="https://www.facebook.com/groups/961187180582440/?fref=nf" target="blank">
+        <img src="images/soz/f.png" alt="f">
+      </a>
+
+       <a href="https://www.twitter.com" target="blank">
+        <img src="images/soz/t.png" alt="f">
+      </a>
+
+       <a href="https://www.youtube.com" target="blank">
+        <img src="images/soz/u.png" alt="f">
+      </a>
+
+
+
       </div>
-
-      <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-
-    <div class="col-sm-3">
-        <p>blla bla bla</p>
-      </div>
-  </div>
-
-
-
 
 
   </div>
