--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
   <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
+  <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="images/fav/57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="mages/fav/114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="mages/fav/72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="mages/fav/144.png">
+    <link rel="apple-touch-icon" sizes="60x560" href="mages/fav/60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="mages/fav/120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="mages/fav/76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="mages/fav/152.png">
+
   <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
 
 
