--- a/galery.html
+++ b/galery.html
@@ -12,9 +12,20 @@
 
   <link href="css/style.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-  <title>Ordu Fatsa Anadolu Yakasi Aslancami Koyu Derneği</title>
+  <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="images/fav/57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="mages/fav/114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="mages/fav/72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="mages/fav/144.png">
+    <link rel="apple-touch-icon" sizes="60x560" href="mages/fav/60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="mages/fav/120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="mages/fav/76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="mages/fav/152.png">
+
+  <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
 
 
 </head>
@@ -37,10 +48,10 @@
           <li><a href="#">Derneğimizin Etkinlikleri</a></li>
         </ul>
       </li>
-      <li><a href="#">Yönetim ve Üyeler</a></li>
-      <li><a href="#">Galeri</a></li>
+      <li><a href="yonetim.html">Yönetim ve Üyeler</a></li>
+      <li><a href="galery.html">Galeri</a></li>
       <li><a href="#">İletişim</a></li>
-      <li><a href="#">Başkanın mesajı</a></li>
+      <li><a href="bmesaji.html">Başkanın mesajı</a></li>
     </ul>
   </div>
 </nav>
@@ -242,59 +253,70 @@
 
 
 <!--Footer-->
-<div id="footer" class="container-fluid">
-  <div id="footer2" class="container">
+<br>
+<div id="footer3" class="container-fluid">
+  <br>
+  <div id="footer4" class="container">
     <div class="row">
-      <div class="col-sm-4">
-        <a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a>
+      <div class="col-sm-3">
+        <a href="http://www.fatsa.gov.tr/" target="blank">
+        <img src="images/icon/1.png" alt="fatsagov" width="100" height="100">
+        </a>
       </div>
 
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
+       <div class="col-sm-3">
+        <a href="http://www.fatsa.bel.tr/" target="blank">
+        <img src="images/icon/2.png" alt="fatsagov" width="100" height="100">
+      </a>
       </div>
 
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <a href="mailto:email@gmail.com" id="email">email@gmail.com</a>
+       <div class="col-sm-3">
+        <a href="http://www.ordu.bel.tr/" target="blank">
+        <img src="images/icon/3.png" alt="fatsagov" width="100" height="100">
+      </a>
       </div>
 
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
-      </div>
-
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
+       <div class="col-sm-3">
+        <a href="http://www.ordu.gov.tr/" target="blank">
+        <img src="images/icon/4.png" alt="fatsagov" width="100" height="100">
+      </a>
       </div>
     </div>
-
-        <div class="row">
-      <div class="col-sm-4">
-        <p>Dumlupınar mah Ordu sok №19 Pendik</p>
-      </div>
-
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
-      </div>
-
-      <div class="col-sm-4">
-        <p>blla bla bla</p>
-      </div>
-    </div>
-
   </div>
+  <br>
+  <br>
 </div>
 
 
+<div id="footer" class="container-fluid">
+  <div id="footer2" class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
+        <p><a href="mailto:email@gmail.com" id="email">email@gmail.com</a></p>
 
+        <p>Dumlupınar mah Ordu sok №19 Pendik</p>
+        <br>
 
+      </div>
 
+      <div class="col-sm-3">
+        <a href="https://www.facebook.com/groups/961187180582440/?fref=nf" target="blank">
+        <img src="images/soz/f.png" alt="f">
+      </a>
 
+       <a href="https://www.twitter.com" target="blank">
+        <img src="images/soz/t.png" alt="f">
+      </a>
+
+       <a href="https://www.youtube.com" target="blank">
+        <img src="images/soz/u.png" alt="f">
+      </a>
+
+      </div>
+
+  </div>
 
 </body>
 </html>
