--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta name="yandex-verification" content="90b3ee4727af0024" />
+
     <meta name="keywords" content="aslancamikoyudernegi, Ordu, Fatsa, Anadolu, Yakası, Aslancami, Köyü, Derneği">
     <meta name="description" content="Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği">
 
