--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="index.html"><img src="images/logo150.png" class="img-responsive center-block" alt="Responsive image" id="logo"></a>
     </div>
 
-    <div class="col-sm-10">
+    <div id="h" class="col-sm-10">
       <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</h1>
   </div>
   </div>
@@ -84,7 +84,7 @@
   <!-- Wrapper for slides -->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12">
+    <div id="slider" class="col-sm-12">
        <div class="carousel-inner">
           <div class="item active">
             <img src="images/1111.jpg" alt="" style="width:100%">
