--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="index.html"><img src="images/logo150.png" class="img-responsive center-block" alt="Responsive image" id="logo"></a>
     </div>
 
-    <div id="h" class="col-sm-10">
+    <div class="col-sm-10">
       <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</h1>
   </div>
   </div>
